bug fixed – menuOption visibility

--- a/bottleneck.css
+++ b/bottleneck.css
@@ -79,12 +79,14 @@ body, html {
     cursor: default;
     margin: 15px 0px 20px 15px;
 }
+
 .menuOption:hover .menuOptionInfo{
     opacity: 1;
 }
 .menuOption:hover .menuOptionName{
     color: white;
-    filter: drop-shadow(0px 0px 2px #0000003f);
+    /* filter: drop-shadow(0px 0px 2px #0000003f);
+    z-index: 999; */
 }
 
 .menuOptionName{
@@ -217,8 +219,9 @@ a{
 .popupMenuInfo{
     top: 25px;
     left: 0px;
-    z-index: 2;
+    
     color: white;
+    background-color: black;
 }
 
 /* POPUPS */
@@ -355,13 +358,15 @@ svg{
     border: 0px;
     background-color: transparent;
 }
+
 .hide{
     
     opacity: 0;
     pointer-events: none;
 }
 #paramOk{
-    display: none
+    display: none;
+    z-index: -3;
 }
 #logos{
    display: flex; 
@@ -455,8 +460,11 @@ svg{
     }
 
     .popupMenuInfo {
-
         max-width: 180px;
+    }
+    #menuOptionInfoContainer .popupMenuInfo {
+        
+        background-color: black;
     }
     
     .menuOptionInfo{
@@ -471,7 +479,7 @@ svg{
         bottom: 13.25px;
         stroke: 1px solid white;
         cursor: pointer;
-        z-index: 0;
+        z-index: -3;
     }
     #logos{
         display: none;
@@ -537,10 +545,10 @@ svg{
     0%{fill:rgb(243, 248, 247)}
     10%{fill:rgb(243, 248, 247)}
     
-    45%{fill:rgb(180, 180, 180)}
-    48%{fill:rgb(170, 170, 170);}
-    50%{fill:rgb(170, 170, 170);}
-    53%{fill:rgb(180, 180, 180)}
+    45%{fill:rgb(170, 170, 170)}
+    48%{fill:rgb(160, 160, 160);}
+    50%{fill:rgb(160, 160, 160);}
+    53%{fill:rgb(170, 170, 170)}
     
     90%{fill:rgb(243, 248, 247)}
     100%{fill:rgb(243, 248, 247)}
@@ -559,9 +567,6 @@ svg{
     font-size: 30px;
     color: white;
 }
-
-
-
 
 #triggerRestart{
     width: 40vw; 
